Added a lot of citations

--- a/b2bdatalog/software.bib
+++ b/b2bdatalog/software.bib
@@ -1,145 +1,199 @@
-@softwareversion {delebecque:hal-02090402-condensed,
-  title = {Scilab},
-  author = {Delebecque, Fran{\c c}ois and Gomez, Claude and Goursat, Maurice 
-    and Nikoukhah, Ramine and Steer, Serge and Chancelier, Jean-Philippe},
-  url = {https://www.scilab.org/},
-  date = {1994-01},
-  file = {https://hal.inria.fr/hal-02090402/file/scilab-1.1.tar.gz},
-  institution = {Inria},
-  license = {Scilab license},
-  hal_id = {hal-02090402},
-  hal_version = {v1},
-  swhid = {swh:1:dir:1ba0b67b5d0c8f10961d878d91ae9d6e499d746a;
-	   origin=https://hal.archives-ouvertes.fr/hal-02090402},
-  version = {1.1},
-  note = {First Scilab version. It was distributed by anonymous ftp.},
-  repository= {https://github.com/scilab/scilab},
-  abstract = {Software for Numerical Computation freely distributed.}
+@article{datalog,
+author = {Ceri, Stefano and Gottlob, Georg and Tanca, Letizia},
+year = {1989},
+month = {04},
+pages = {146 - 166},
+title = {What you Always Wanted to Know About Datalog (And Never Dared to Ask).},
+volume = {1},
+journal = {Knowledge and Data Engineering, IEEE Transactions on},
+doi = {10.1109/69.43410}
 }
-@software {delebecque:hal-02090402,
-  title = {Scilab},
-  author = {Delebecque, Fran{\c c}ois and Gomez, Claude and Goursat, Maurice 
-    and Nikoukhah, Ramine and Steer, Serge and Chancelier, Jean-Philippe},
-  date = {1994},
-  institution = {Inria},
-  license = {Scilab license},
-  hal_id = {hal-02090402},
-  hal_version = {v1},
-  url = {https://www.scilab.org/},
-  abstract = {Software for Numerical Computation freely distributed.},
-  repository= {https://github.com/scilab/scilab},
+@inproceedings{rdfox,
+author = {Nenov, Yavor and Piro, Robert and Motik, Boris and Horrocks, Ian and Wu, Zhe and Banerjee, Jay},
+year = {2015},
+month = {10},
+pages = {3-20},
+title = {RDFox: A Highly-Scalable RDF Store},
+isbn = {978-3-319-25009-0},
+doi = {10.1007/978-3-319-25010-6_1}
 }
-
-@softwareversion {delebecque:hal-02090402v1,
-  version = {1.1},
-  date = {1994-01},
-  file = {https://hal.inria.fr/hal-02090402/file/scilab-1.1.tar.gz},
-  swhid = {swh:1:dir:1ba0b67b5d0c8f10961d878d91ae9d6e499d746a;
-	   origin=https://hal.archives-ouvertes.fr/hal-02090402},
-  note = {First Scilab version. It was distributed by anonymous ftp.},
-  crossref = {delebecque:hal-02090402}
+@inproceedings{bigdatalog,
+author = {Shkapsky, Alexander and Yang, Mohan and Interlandi, Matteo and Chiu, Hsuan and Condie, Tyson and Zaniolo, Carlo},
+year = {2016},
+month = {06},
+pages = {1135-1149},
+title = {Big Data Analytics with Datalog Queries on Spark},
+volume = {2016},
+journal = {Proceedings. ACM-Sigmod International Conference on Management of Data},
+doi = {10.1145/2882903.2915229}
 }
- @software {cgal,
-  title = {The Computational Geometry Algorithms Library},
-  author = {{The CGAL Project}},
-  editor = {{CGAL Editorial Board}},
-  date = {1996},
-  url = {https://cgal.org/}
- }
-
- @softwareversion{cgal:5-0-2,
-  crossref = {cgal},
-  version = {{5.0.2}},
-  url = {https://docs.cgal.org/5.02},
-  date = {2020},
-  swhid = {swh:1:rel:636541bbf6c77863908eae744610a3d91fa58855;
-           origin=https://github.com/CGAL/cgal/}
- }
-
- @softwaremodule{cgal:lp-gi-20a,
-  crossref = {cgal:5-0-2},
-  author = {Menelaos Karavelas},
-  subtitle = {{2D} Voronoi Diagram Adaptor},
-  license = {GPL},
-  introducedin = {cgal:3-1},
-  url = {https://doc.cgal.org/5.0.2/Manual/packages.html#PkgVoronoiDiagram2},
- }
- @softwaremodule{cgal:lp-gi-20a-condensed,
-  title = {The Computational Geometry Algorithms Library},
-  subtitle = {{2D} Voronoi Diagram Adaptor},
-  author = {Menelaos Karavelas},
-  editor = {{CGAL Editorial Board}},
-  license = {GPL},
-  version = {{5.0.2}},
-  introducedin = {cgal:3-1},
-  date = {2020},
-  swhid = {swh:1:rel:636541bbf6c77863908eae744610a3d91fa58855;
-           origin=https://github.com/CGAL/cgal/},
-  url = {https://doc.cgal.org/5.0.2/Manual/packages.html#PkgVoronoiDiagram2},
- }
-@software {parmap,
-  title = {The Parmap library},
-  author = {Di Cosmo, Roberto and Marco Danelutto},
-  date = {2012},
-  institution = {{Inria} and {University of Paris} and {University of Pisa}},
-  license = {LGPL-2.0},
-  url = {https://rdicosmo.github.io/parmap/},
-  repository= {https://github.com/rdicosmo/parmap},
+@inbook{cog,
+author = {Imran, Muhammad and Gévay, Gábor and Markl, Volker},
+year = {2020},
+month = {11},
+pages = {70-83},
+title = {Distributed Graph Analytics with Datalog Queries in Flink},
+isbn = {978-3-030-61132-3},
+doi = {10.1007/978-3-030-61133-0_6}
 }
-
-@softwareversion {parmap-1.1.1,
-  crossref = {parmap},
-  date = {2020},
-  version = {1.1.1},
-  swhid = {swh:1:rel:373e2604d96de4ab1d505190b654c5c4045db773;
-     origin=https://github.com/rdicosmo/parmap;
-     visit=swh:1:snp:2a6c348c53eb77d458f24c9cbcecaf92e3c45615},
+@article{cog2,
+author = {Imran, Muhammad and Gévay, Gábor and Quiané-Ruiz, Jorge-Arnulfo and Markl, Volker},
+year = {2022},
+month = {03},
+pages = {},
+title = {Fast datalog evaluation for batch and stream graph processing},
+volume = {25},
+journal = {World Wide Web},
+doi = {10.1007/s11280-021-00960-w}
 }
-
-@codefragment {simplemapper,
-  subtitle = {Core mapping routine},
-  swhid = {swh:1:cnt:43a6b232768017b03da934ba22d9cc3f2726a6c5;
-     origin=https://github.com/rdicosmo/parmap;
-     visit=swh:1:snp:2a6c348c53eb77d458f24c9cbcecaf92e3c45615;
-     anchor=swh:1:rel:373e2604d96de4ab1d505190b654c5c4045db773;
-     path=/src/parmap.ml;
-     lines=192-228},
-  crossref = {parmap-1.1.1}
+@misc{logica,
+howpublished = {\url{https://github.com/google/logica}},
+note = {Accessed: 2022-11-04}
 }
-@codefragment {simplemapper-condensed,
-  title = {The Parmap library},
-  author = {Di Cosmo, Roberto and Marco Danelutto},
-  date = {2020},
-  institution = {{Inria} and {University of Paris} and {University of Pisa}},
-  license = {LGPL-2.0},
-  url = {https://rdicosmo.github.io/parmap/},
-  repository= {https://github.com/rdicosmo/parmap},
-  version = {1.1.1},
-  subtitle = {Core mapping routine},
-  swhid = {swh:1:cnt:43a6b232768017b03da934ba22d9cc3f2726a6c5;
-     origin=https://github.com/rdicosmo/parmap;
-     visit=swh:1:snp:2a6c348c53eb77d458f24c9cbcecaf92e3c45615;
-     anchor=swh:1:rel:373e2604d96de4ab1d505190b654c5c4045db773;
-     path=/src/parmap.ml;
-     lines=192-228}
+@article{yedalog,
+author = {Hewage, Thulara and Halgamuge, Malka and Syed, Ali and Ekici, Gullu},
+year = {2018},
+month = {02},
+pages = {94-100},
+title = {Review: Big Data Techniques of Google, Amazon, Facebook and Twitter},
+volume = {13},
+journal = {Journal of Communications},
+doi = {10.12720/jcm.13.2.94-100}
 }
-
-@article{ad-wood-2003,
-  author    = {Christopher Anderson and Sophia Drossopoulou},
-  title     = {{BabyJ}: from Object Based to Class Based Programming via Types},
-  journal   = {{WOOD}},
-  volume    = {82},
-  number    = {7},
-  pages     = {53--81},
-  year      = {2003}
+@article{vadalog,
+author = {Bellomarini, Luigi and Benedetto, Davide and Gottlob, Georg and Sallinger, Emanuel},
+year = {2020},
+month = {05},
+pages = {101528},
+title = {Vadalog: A modern architecture for automated reasoning with large knowledge graphs},
+volume = {105},
+journal = {Information Systems},
+doi = {10.1016/j.is.2020.101528}
 }
-
-@softwareversion{gf-tag-sound-repo,
-  title={tag-sound},
-  author={Ben Greenman and Matthias Felleisen},
-  swhid={swh:1:dir:cd0b0abeee707e57cd699e2e2ebd075da8ebf1f7;origin=https://github.com/nuprl/tag-sound;visit=swh:1:snp:7967bc0abee8bf3bfffb9252207a07b73538525a;anchor=swh:1:rev:4cc09ca228947a99c8f4ac45eefb76e96ee96e53},
-  repository={https://github.com/nuprl/tag-sound},
-  version={4cc09ca},
-  date={2020}
+@inproceedings{datalog_plus_minus,
+  title={Datalog+/-: Questions and Answers},
+  author={Georg Gottlob and Thomas Lukasiewicz and Andreas Pieris},
+  booktitle={KR},
+  year={2014}
 }
-
+@article{sticky,
+author = {Gottlob, Georg and Pieris, Andreas},
+year = {2012},
+month = {12},
+pages = {87–128},
+title = {Towards more expressive ontology languages: The query answering problem},
+volume = {193},
+journal = {Artificial Intelligence},
+doi = {10.1016/j.artint.2012.08.002}
+}
+@inbook{warded,
+author = {Baldazzi, Teodoro and Bellomarini, Luigi and Sallinger, Emanuel and Atzeni, Paolo},
+year = {2021},
+month = {01},
+pages = {267-275},
+title = {Eliminating Harmful Joins in Warded Datalog+/},
+isbn = {978-3-030-91166-9},
+doi = {10.1007/978-3-030-91167-6_18}
+}
+@article{monadic,
+author = {Gottlob, Georg and Koch, Christoph},
+year = {2003},
+month = {11},
+pages = {},
+title = {Monadic Datalog and the Expressive Power of}
+}
+@misc{datascript,
+howpublished = {\url{https://github.com/tonsky/datascript}},
+note = {Accessed: 2022-11-04}
+}
+@misc{opa,
+howpublished = {\url{https://github.com/open-policy-agent/opa}},
+note = {Accessed: 2022-11-04}
+}
+@misc{datomic,
+howpublished = {\url{https://datomic.com}},
+note = {Accessed: 2022-11-04}
+}
+@inproceedings{COST,
+  title={Scalability! But at what COST?},
+  author={Frank McSherry and Michael Isard and Derek Gordon Murray},
+  booktitle={HotOS},
+  year={2015}
+}
+@misc{blogdynamicdatalog,
+howpublished = {\url{https://github.com/frankmcsherry/dynamic-datalog}},
+note = {Accessed: 2022-11-04}
+}
+@misc{blogvldbsigmod,
+howpublished = {\url{https://github.com/frankmcsherry/blog/blob/master/posts/2019-09-06.md}},
+note = {Accessed: 2022-11-04}
+}
+@inproceedings{differential_dataflow,
+author = {Abadi, Martín and McSherry, Frank and Plotkin, Gordon},
+year = {2015},
+month = {04},
+pages = {71-83},
+title = {Foundations of Differential Dataflow},
+doi = {10.1007/978-3-662-46678-0_5}
+}
+@article{recstep,
+author = {Zhu, Jianqiao and Zhang, Zuyu and Albarghouthi, Aws and Koutris, Paraschos and Patel, Jignesh},
+year = {2018},
+month = {12},
+pages = {},
+title = {Scaling-Up In-Memory Datalog Processing: Observations and Techniques}
+}
+@inproceedings{dcdatalog,
+author = {Wu, Jiacheng and Wang, Jin and Zaniolo, Carlo},
+title = {Optimizing Parallel Recursive Datalog Evaluation on Multicore Machines},
+year = {2022},
+isbn = {9781450392495},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3514221.3517853},
+doi = {10.1145/3514221.3517853},
+abstract = {Over the past years, there has been a resurgence of interest in Datalog due to its superior ability of expressing applications that require recursive computations. However, in addition to expressive power, supporting analytical tasks with ever-increasing volume of data requires high performance and scalability. In this paper, we present DCDatalog, an in-memory Datalog engine specifically designed for modern shared-memory multicore architectures. Our key contribution is a novel system architecture that supports a wide scope of Datalog applications with a light-weight coordination scheme during parallel evaluation. To this end, we propose a dynamic scheduling strategy that can generate the parallel execution plan on-the-fly while reducing concurrent accesses to the shared memory. Experimental results on several large datasets show that our system significantly outperforms existing parallel Datalog engines and also scales well with increasing amount of data.},
+booktitle = {Proceedings of the 2022 International Conference on Management of Data},
+pages = {1433–1446},
+numpages = {14},
+keywords = {query processing, multicore machine, datalog, efficiency},
+location = {Philadelphia, PA, USA},
+series = {SIGMOD '22}
+}
+@article{deals,
+author = {Shkapsky, Alexander and Yang, Mohan and Zaniolo, Carlo},
+year = {2015},
+month = {05},
+pages = {867-878},
+title = {Optimizing recursive queries with monotonic aggregates in DeALS},
+volume = {2015},
+journal = {Proceedings - International Conference on Data Engineering},
+doi = {10.1109/ICDE.2015.7113340}
+}
+@inproceedings{spark,
+author = {Armbrust, Michael and Ghodsi, Ali and Zaharia, Matei and Xin, Reynold and Lian, Cheng and Huai, Yin and Liu, Davies and Bradley, Joseph and Meng, Xiangrui and Kaftan, Tomer and Franklin, Michael},
+year = {2015},
+month = {05},
+pages = {1383-1394},
+title = {Spark SQL},
+doi = {10.1145/2723372.2742797}
+}
+@article{flink,
+author = {Rabl, Tilmann and Traub, Jonas and Katsifodimos, Asterios and Markl, Volker},
+year = {2016},
+month = {01},
+pages = {},
+title = {Apache Flink in current research},
+volume = {58},
+journal = {it - Information Technology},
+doi = {10.1515/itit-2016-0005}
+}
+@inproceedings{bddbddb,
+author = {Whaley, John and Avots, Dzintars and Carbin, Michael and Lam, Monica},
+year = {2005},
+month = {11},
+pages = {97-118},
+title = {Using Datalog with Binary Decision Diagrams for Program Analysis},
+isbn = {978-3-540-29735-2},
+doi = {10.1007/11575467_8}
+}
